--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "IMG.jpg"
   name             : "Seoyeon Kim"
   pronouns         : "she/her"  
-  bio              : "Bioinformatician and neuroscientist mapping the genetic landscapes that define the brain from development to disorder."
+  bio              : "Bioinformatician and neuroscientist mapping the genetic landscapes that define the brain from development to neurological disorder."
   location         : "Seoul, Korea"
   employer         : "Korea University"
   uri              : # URL
