--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Seoyeon Kim's Blog"
+title                    : "Seoyeon's Personal Website"
 title_separator          : "-"
 name                     : &name "Seoyeon Kim"
 description              : &description "personal description"
