--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "IMG.jpg"
   name             : "Seoyeon Kim"
-  pronouns         : "she/her"  
+  pronouns         : "she/her | Graduate Student"  
   bio              : "Neuroscientist and Bioinformatician mapping the genetic landscapes that define the brain from development to neurological disorder."
   location         : "Seoul, Korea"
   employer         : "Korea University"
