--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,6 +22,9 @@ main:
     
   - title: "CV"
     url: /cv/
+
+  - title: "Moments"
+    url: "https://military-lilac-a3f.notion.site/Moments-1472e869bf9d803487d1ecef6db72393"
     
 #  - title: "Guide"
 #    url: /markdown/
