--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
     url: /cv/
 
   - title: "Moments"
-    url: "https://military-lilac-a3f.notion.site/Moments-1472e869bf9d803487d1ecef6db72393"
+    url: "https://ssunrla16.notion.site/Moments-1472e869bf9d803487d1ecef6db72393"
     
 #  - title: "Guide"
 #    url: /markdown/
