--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "ssun1116/ssun1116.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "IMG.jpg"
+  avatar           : "IMG_9694_crop.jpg"
   name             : "Seoyeon Kim"
   pronouns         : "Graduate Student | she/her"  
   bio              : "Neuroscientist and Bioinformatician mapping the genetic landscapes that define the brain from development to neurological disorder."
