--- a/_config.yml
+++ b/_config.yml
@@ -77,9 +77,9 @@ author:
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
   first-author:
-    title: 'First Author'
+    title: 'First Author Papers'
   co-author:
-    title: 'Co-author'    
+    title: 'Co-author Papers'    
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
